Spacing fix

--- a/styles/Program/_program-tabs.scss
+++ b/styles/Program/_program-tabs.scss
@@ -37,7 +37,6 @@
   }
   p.note-text {
     width: 80%;
-    padding-top: 2rem;
     display: flex;
     font-size: crem(24px);
     line-height: crem(36px);
